fixed z-index and height of social bar mobile

--- a/mobile.css
+++ b/mobile.css
@@ -86,7 +86,7 @@
 /* Fixed/sticky icon bar (vertically aligned 50% from the top of the screen) */
 .icon-bar {
   position: fixed;
-  top: 50%;
+  top: 55%;
   left: 89%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
@@ -102,7 +102,9 @@
   overflow: hidden;
   background-color: #1a1a1a;
   position:fixed;
+  top:0;
   width: 100vw;
+  z-index: 1;
 }
 
 /* Hide the links inside the navigation menu (except for logo/home) */
